added check if fmt is already used

--- a/external_dependecies/CMakeLists.txt
+++ b/external_dependecies/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_subdirectory(fmt)
+if (TARGET fmt)
+    message(WARNING "FMT already processed skipping adding it in external dependecies")
+else()
+    add_subdirectory(fmt)
+endif()
