--- a/src/debug20/CMakeLists.txt
+++ b/src/debug20/CMakeLists.txt
@@ -6,4 +6,8 @@ add_library(debug20
 
 target_link_libraries(debug20 PRIVATE fmt)
 
+target_compile_features(debug20 PUBLIC cxx_std_20)
+target_compile_options(debug20 PRIVATE -Wall -Wextra -Wpedantic -Werror)
+set_property(TARGET debug20 PROPERTY CXX_STANDARD 20)
+
 target_include_directories(debug20 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
