--- a/src/source_location/CMakeLists.txt
+++ b/src/source_location/CMakeLists.txt
@@ -1,8 +1,5 @@
-add_library(source_location
-    source_location.hpp source_location.cpp)
+add_library(source_location)
 
-target_compile_features(source_location PUBLIC cxx_std_20)
-target_compile_options(source_location PRIVATE -Wall -Wextra -Wpedantic -Werror)
-set_property(TARGET source_location PROPERTY CXX_STANDARD 20)
-    
+target_sources(source_location source_location.hpp)
+
 target_include_directories(source_location PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
