fixed source location library

--- a/src/source_location/CMakeLists.txt
+++ b/src/source_location/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(source_location)
+add_library(source_location INTERFACE)
 
-target_sources(source_location source_location.hpp)
+target_sources(source_location PUBLIC source_location.hpp)
 
-target_include_directories(source_location PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
+# target_include_directories(source_location PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
