--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.17)
 
 project(Debug20
-VERSION 0.1
+VERSION 0.2
 LANGUAGES CXX)
+
+# if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+#     set(CMAKE_VERBOSE_MAKEFILE ON)
+# endif()
 
 add_subdirectory(external_dependecies)
 
